# OrdoPlayEditor

./: .gitignore  Cargo.toml  ORDOPLAY_EDITOR_DESIGN_DOCUMENT.md  ORDOPLAY_EDITOR_TASK_LIST.md  README.md  ROADMAP.md  editor.md  rust-toolchain.toml
.github/: copilot-instructions.md
crates/ordoplay_editor_app/: Cargo.toml
crates/ordoplay_editor_app/src/: app.rs  audio.rs  build.rs  commands.rs  components.rs  file_watcher.rs  history.rs  hot_reload.rs  main.rs  menus.rs  panel_types.rs  physics.rs  play_mode.rs  prefab.rs  project.rs  state.rs  theme.rs  thumbnail.rs  tools.rs  viewport.wgsl  viewport_renderer.rs
crates/ordoplay_editor_app/src/panels/: asset_browser.rs  console.rs  hierarchy.rs  inspector.rs  mod.rs  profiler.rs  project_settings.rs  property_drawer.rs  viewport.rs
crates/ordoplay_editor_graph/: Cargo.toml
crates/ordoplay_editor_graph/src/: connection.rs  evaluation.rs  graph.rs  lib.rs  node.rs  port.rs  ui.rs
crates/ordoplay_editor_graph/src/graphs/: animation.rs  gameplay.rs  material.rs  mod.rs  vfx.rs
crates/ordoplay_editor_sequencer/: Cargo.toml
crates/ordoplay_editor_sequencer/src/: binding.rs  keyframe.rs  lib.rs  sequence.rs  track.rs  ui.rs
